--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: node_js
 node_js:
   - 0.8
-  - 0.6
 
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  - npm install -g testacular@canary
 
 script:
   - testacular start ./testacular.conf.js --single-run --browsers PhantomJS
