--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"	 
-	- npm install testacular@canary"
+	- npm install testacular@canary
 
 script:
   - testacular start ./config/testacular.conf.js --single-run --browsers PhantomJS
