tweaked travis-ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
   - 0.8
 
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"	 
-	- npm install testacular@canary
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - npm install -g testacular@canary
 
 script:
   - testacular start ./config/testacular.conf.js --single-run --browsers PhantomJS
